# Public/openapi.yaml
@@ -134,49 +134,6 @@ paths:
           description: Invalid ID supplied
         '404':
           description: User not found
-              
-    post:
-      tags:
-        - User
-      summary: Post a new user
-      description: Post a new user
-      operationId: postUser
-      requestBody:
-        required: true
-        content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        '400':
-          description: Invalid input
-    delete:
-      tags:
-        - User
-      summary: Delete user by ID
-      description: Delete user by ID
-      operationId: deleteUserByID
-      parameters:
-        - name: userID
-          in: query
-          description: ID of user to delte
-          required: true
-          schema:
-            type: string
-            format: uuid
-      responses:
-        '204':
-          description: Deleted
-        '400':
-          description: Invalid ID supplied
-        '404':
-          description: User not found
     patch:
       tags:
         - User
